[package]
name = "epix-server"
version = "0.3.0"
edition = "2021"
description = "Runnable Epix node: clones a xite from the network and serves it in a browser."

[build-dependencies]
epix-build = { path = "../epix-build" }

[dependencies]
epix-node = { path = "../epix-node", default-features = false }
epix-ui = { path = "../epix-ui" }
epix-core = { path = "../epix-core" }
epix-crypt = { path = "../epix-crypt" }
epix-protocol = { path = "../epix-protocol" }
epix-transport = { path = "../epix-transport" }
serde_json = "1"
rmpv = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
# Desktop bundles the auth/login plugins that a mobile build leaves off (the
# phone UI is already local to the device). Build a mobile node with
# `--no-default-features`.
default = ["desktop", "tor", "i2p-embedded", "mesh", "inbound-seeding", "local-discovery", "bittorrent"]
desktop = ["epix-ui/ui-password", "epix-ui/multiuser", "epix-ui/benchmark"]
# BitTorrent bridge - on for the desktop/server build.
bittorrent = ["epix-node/bittorrent"]
# In-process Tor (Arti): onion dialing + hosting + SOCKS listener for the shell.
tor = ["epix-node/tor"]
# In-process Tor pluggable transports (Snowflake) for censored networks. Off by
# default; a bridges-enabled desktop build opts in explicitly.
bridges = ["epix-node/bridges"]
i2p = ["epix-node/i2p"]
mesh = ["epix-node/mesh"]
# Desktop: compile the embedded router in AND auto-enable it on first run.
i2p-embedded = ["epix-node/i2p-embedded", "epix-node/i2p-autostart"]
# The always-on server seeds and maps its port and discovers LAN peers; the
# node no longer pulls these by default, so re-add them here (the mobile FFI
# leaves them off). `--no-default-features` drops them for a server-side mobile build.
inbound-seeding = ["epix-node/inbound-seeding"]
local-discovery = ["epix-node/local-discovery"]
