[package]
name = "epix-tor"
version = "0.1.0"
edition = "2021"

[dependencies]
epix-core = { path = "../epix-core" }
epix-transport = { path = "../epix-transport" }
# rustls instead of the default native-tls: pure Rust, so the same build works
# on desktop and Android (native-tls needs an OpenSSL for the NDK target).
arti-client = { version = "0.44", default-features = false, features = [
    "tokio",
    "rustls",
    "compression",
    "flowctl-cc",
    "onion-service-client",
    "onion-service-service",
] }
tor-hsservice = "0.44"
safelog = "0.9"
tor-rtcompat = { version = "0.44", features = ["tokio", "rustls"] }
tor-cell = "0.44"
tor-proto = "0.44"
# rustls 0.23 won't auto-pick a crypto provider when several are in the tree;
# we install `ring` explicitly before bootstrap (see `install_crypto_provider`).
rustls = { version = "0.23", default-features = false, features = ["ring"] }
async-trait = "0.1"
# Expanded-key signing for the tracker onion-ownership challenge. Built on
# curve25519 directly: Arti stores hs identity keys as uniform reduced
# scalars, which ed25519-dalek's hazmat ExpandedSecretKey would re-clamp
# (silently swapping in a different key).
curve25519-dalek = { version = "5", default-features = false, features = ["alloc", "digest", "zeroize"] }
sha2 = { version = "0.11", default-features = false }
futures = "0.3"
# Only for reading arti's guards.json in the poisoned-guard-state check.
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "macros", "time"] }
tracing = "0.1"
# arti's "compression" pulls in liblzma-sys, which links the system liblzma
# dynamically when pkg-config finds one. On a build machine with Homebrew that
# bakes /opt/homebrew/.../liblzma.5.dylib into the shipped binary, and the app
# crashes at launch on any Mac without it. The "static" feature compiles lzma
# from the vendored source into the binary instead.
liblzma-sys = { version = "0.4", features = ["static"] }

[dev-dependencies]
# Independent Ed25519 verifier for the OnionKey signing test.
ed25519-dalek = { version = "2", default-features = false }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
