[package]
name = "epix-ui"
version = "0.1.0"
edition = "2021"
description = "The local UI server: serves xite files over HTTP and the EpixFrame WebSocket command API."

[dependencies]
epix-core = { path = "../epix-core" }
epix-xite = { path = "../epix-xite" }
epix-user = { path = "../epix-user" }
epix-peer = { path = "../epix-peer" }
epix-db = { path = "../epix-db" }
epix-protocol = { path = "../epix-protocol" }
epix-transport = { path = "../epix-transport" }
epix-propagation = { path = "../epix-propagation" }
epix-worker = { path = "../epix-worker" }
epix-crypt = { path = "../epix-crypt" }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
include_dir = "0.7"

[dev-dependencies]
rmpv = "1"
async-trait = "0.1"
epix-crypt = { path = "../epix-crypt" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tempfile = "3"
reqwest = { version = "0.12", default-features = false }
