[package]
name = "epix-ui"
version = "0.1.0"
edition = "2021"
description = "The local UI server: serves xite files over HTTP and the EpixFrame WebSocket command API."

[dependencies]
epix-core = { path = "../epix-core" }
epix-content = { path = "../epix-content" }
epix-xite = { path = "../epix-xite" }
epix-user = { path = "../epix-user" }
epix-peer = { path = "../epix-peer" }
epix-db = { path = "../epix-db" }
epix-protocol = { path = "../epix-protocol" }
epix-transport = { path = "../epix-transport" }
epix-propagation = { path = "../epix-propagation" }
epix-worker = { path = "../epix-worker" }
epix-crypt = { path = "../epix-crypt" }
epix-chain = { path = "../epix-chain" }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
rmpv = "1"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
include_dir = "0.7"
futures-util = "0.3"
libc = "0.2"
maxminddb = { version = "0.24", features = ["mmap"] }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tar = "0.4.46"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
getrandom = { version = "0.2" }
sha3 = { version = "0.10", optional = true }

[features]
# UiPassword: a cookie-session login gate over the whole UI. Off by default and
# on mobile (a phone's UI is already local to the device); enable for a shared
# or exposed desktop node.
ui-password = []
# Multiuser: multiple master-seed identities with login/switch. Desktop only.
multiuser = []
# Benchmark: a /Benchmark diagnostics page timing the node's crypto/hash/pack
# hot paths (shows off the Rust perf win). Off by default.
benchmark = ["dep:sha3"]

[dev-dependencies]
async-trait = "0.1"
epix-crypt = { path = "../epix-crypt" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tempfile = "3"
reqwest = { version = "0.12", default-features = false }
