[package]
name = "epix-ui"
version = "0.1.0"
edition = "2021"
description = "The local UI server: serves xite files over HTTP and the EpixFrame WebSocket command API."

[dependencies]
epix-core = { path = "../epix-core" }
epix-content = { path = "../epix-content" }
epix-xite = { path = "../epix-xite" }
epix-user = { path = "../epix-user" }
epix-peer = { path = "../epix-peer" }
epix-db = { path = "../epix-db" }
epix-protocol = { path = "../epix-protocol" }
epix-transport = { path = "../epix-transport" }
epix-propagation = { path = "../epix-propagation" }
epix-worker = { path = "../epix-worker" }
epix-crypt = { path = "../epix-crypt" }
epix-chain = { path = "../epix-chain" }
# The BitTorrent engine the /bt/stream endpoint drives. Optional: pulled in only
# by the `bittorrent` feature, so the iOS build (which never enables it) has no
# BT code. See crates/epix-bt.
epix-bt = { path = "../epix-bt", optional = true }
base64 = "0.22"
sha2 = "0.11"
hex = "0.4"
rmpv = "1"
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = { version = "0.5", features = ["util", "make"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
include_dir = "0.7"
futures-util = "0.3"
libc = "0.2"
maxminddb = { version = "0.30", features = ["mmap"] }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tar = "0.4.46"
zip = { version = "8.6.0", default-features = false, features = ["deflate", "aes-crypto"] }
getrandom = { version = "0.4" }
sha3 = { version = "0.12", optional = true }

[features]
# UiPassword: a cookie-session login gate over the whole UI. Off by default and
# on mobile (a phone's UI is already local to the device); enable for a shared
# or exposed desktop node.
ui-password = []
# Multiuser: multiple master-seed identities with login/switch. Desktop only.
multiuser = []
# Benchmark: a /Benchmark diagnostics page timing the node's crypto/hash/pack
# hot paths (shows off the Rust perf win). Off by default.
benchmark = ["dep:sha3"]
# BitTorrent bridge present in this build. Pulls in the `epix-bt` engine and
# mounts the `/bt/stream` Range endpoint, and gates the `bittorrent` capability
# bit in `serverInfo` so xites feature-detect it. Forwarded from `epix-node`'s
# `bittorrent` feature; off on iOS (so no BT code is in that binary).
bittorrent = ["dep:epix-bt"]
# Tor bridges (Snowflake) present in this build. Only activates the Config-page
# "Use Tor bridges" toggle (and the matching serverInfo flag); the actual
# transport lives in epix-tor. Forwarded from epix-node's `bridges` feature.
bridges = []

[dev-dependencies]
epix-reticulum = { path = "../epix-reticulum" }
async-trait = "0.1"
epix-crypt = { path = "../epix-crypt" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
tempfile = "3"
reqwest = { version = "0.12", default-features = false }
