[package]
name = "epix-user"
version = "0.1.0"
edition = "2021"
description = "The local user: a master seed and per-xite identity keys, derived byte-for-byte compatibly with EpixNet."

[dependencies]
epix-crypt = { path = "../epix-crypt" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
