[package]
name = "epix-xite"
version = "0.1.0"
edition = "2021"
description = "Xite lifecycle: storage, content.json load/verify, file accounting, and peer announcing."

[dependencies]
epix-core = { path = "../epix-core" }
epix-content = { path = "../epix-content" }
epix-discovery = { path = "../epix-discovery" }
epix-transport = { path = "../epix-transport" }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
epix-crypt = { path = "../epix-crypt" }
tempfile = "3"
