[package]
name = "epix-xite"
version = "0.1.0"
edition = "2021"
description = "Xite lifecycle: storage, content.json load/verify, file accounting, and peer announcing."

[dependencies]
epix-core = { path = "../epix-core" }
epix-content = { path = "../epix-content" }
epix-crypt = { path = "../epix-crypt" }
epix-discovery = { path = "../epix-discovery" }
epix-transport = { path = "../epix-transport" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# content.json `ignore` patterns are Python regexes with lookaheads
# (e.g. `css/(?!all\.css)`), which the plain regex crate can't express.
fancy-regex = "0.14"
rmpv = "1"
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
epix-crypt = { path = "../epix-crypt" }
tempfile = "3"
