[package]
name = "reticulum-spike"
version = "0.1.0"
edition = "2021"
publish = false

# Phase-0 spike: prove a Reticulum Link can carry our msgpack frames between two
# nodes — the seam that lets a wire connection over PeerStream run on mesh.
# Two in-process nodes over a UDP loopback link. Deleted once epix-reticulum exists.

[dependencies]
reticulum = { git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs", rev = "dc4e03bb08a2069d03ba038bcc63eb9358201dd5" }
tokio = { version = "1", features = ["full"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
rmpv = "1"
